# riki

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.riki/: config.json  ephemeral_spec.yaml
src/riki/: graph.py  main.py  mock_server.py  models.py  sample_spec.yaml  tools.py
src/riki/cli/: main.py
src/riki/reasoning/: classifier.py  diagnostician.py  flow.py  healer.py  llm_diagnostician.py
src/riki/scanner/: scanner.py
tests/: conftest.py  test_baseline.py  test_reasoning.py
tests/baseline/: report.json
