[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "riki"
version = "0.1.0"
description = "Autonomous API Contract-Testing System"
requires-python = ">=3.9"
dependencies = [
    "langgraph",
    "openapi-core",
    "pydantic>=2.0",
    "httpx",
    "pyyaml",
    "click>=8.0",
]

[project.scripts]
riki = "riki.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]